Update PeopleGeneratorsTest.java